--- a/geometry/connections.bib
+++ b/geometry/connections.bib
@@ -189,3 +189,16 @@ a kind of cohesive motives.},
   address =   {Institute for Advanced Study},
   year =      2013
 }
+@article{DBLP:journals/corr/abs-1911-00580,
+  author    = {Mart{\'{\i}}n H{\"{o}}tzel Escard{\'{o}}},
+  title     = {Introduction to Univalent Foundations of Mathematics with Agda},
+  journal   = {CoRR},
+  volume    = {abs/1911.00580},
+  year      = {2019},
+  url       = {http://arxiv.org/abs/1911.00580},
+  archivePrefix = {arXiv},
+  eprint    = {1911.00580},
+  timestamp = {Mon, 11 Nov 2019 18:38:09 +0100},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1911-00580.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
