--- a/geometry/geometry.tex
+++ b/geometry/geometry.tex
@@ -14,6 +14,22 @@ This thesis will show how to formalize parts of differential geometry in homotop
 This thesis is very much in the spirit of Freed and Hopkins \cite{freed2013chernweil}, where the authors adopt the point of view of a classicial differential geometer and teach us how much we may gain by generalizing the standard constructions towards sheaves, towards groupoids, and towards simplicial sets. Homotopy Type Theory offers a formalism for working with these advanced objects, as do $\infty$-toposes. A community of folks have represented this higher point of view for many years, explaining how we might use it to work with geometry and physics. I have managed to devote some time to following up on their suggestions.
 \section{Manifolds to $\infty$-topos}
 \section{HoTT to prove theorems in the topos}
+Many of the benefits of using HoTT and $\infty$-toposes derive from the idea of \emph{universes}. A universe is a type inside of which are contained other types, a nesting that lets us talk more intuitively about classifying spaces. 
+
+Consider the classical story of Grassmanians, which classify vector bundles. The Grassmanian $G(k,n)$ is the set of $k$-dimensional subspaces of $\rr^n$. There is a natural topology on this set which gives it the structure of a compact smooth manifold. It is the base space of a vector bundle $E(k,n)\to G(k,n)$, whose fiber over a point is the vector space at that point: $E(k,n) = \{(p, v): G(k,n)\times\rr^n | v\in p\}$. This construction was very circular and confusing to me as a classical mathematician, and the type theory formulation is not only a vast generalization, but a \emph{clarification}. The magic that's being perpetrated in the Grassmanian construction is that the base space $G$ has as its points entire vector spaces, but collapsed to a single point conceptually, and then the honest vector space as a set is installed over that point to form $E$. The base point in $G$ is the vector space considered as a single set: $G$ is a set of sets. This is already worthy of the name ``universe,'' and we should note that standard set theory permits such nesting.
+
+Taking the union $\cup_{n=1}^{\infty}E(k,n)\to G(k,n)$ over all dimensions of ambient $\rr^n$s gives a bundle $E(k)\to G(k)$ whose spaces are infinite dimensional, with fiber having dimension $k$. Why do we have to pass to infinite dimensions? Only then can we formulate a clean theorem:
+\begin{mythm}
+	If $M$ is a paracompact topological manifold, then the map from homotopy classes of maps $[M, G(k)]$ to equivalence classes of $k$-dimensional vector bundles over $M$, $\mathrm{Vect}(M, k)$ given by pulling back $E(k)$, i.e. $[f]\mapsto f^*(E(k))$, is a bijection.
+\end{mythm}
+What if we imagined performing the construction $[M, G(k)]$ literally? In spirit it might be related to the project of embedding an abstract manifold $M$ in some $\rr^n$, which can always be done and for which there are strong bounds on the required dimension compared to the dimension of $M$ and various topological properties of $M$. In the case of classifying a bundle over $M$ we would be mapping $M$ into the less topologically trivial space of planes. There would be a lot going on if we were to really try this! For a fixed manifold we only need a finite-dimensional $G(k,n)$ to establish the bijection, but there are three factors that increase the bound on dimension as we consider every manifold and bundle. First there is obviously the dimension of the manifold, which can be arbitrarily large. Second, the manifold may have nontrivial topology which requires a very high dimensional space to make room for the necessary topological squirming. And third, a given vector bundle may itself be twisty over the topology of $M$ and require more dimensional room to capture it. Passing to the union of all the Grassmanians allows us to make the blanket statement.
+
+But even classically that's not how we use the theorem. Its use is usually theoretical. We can use it to reduce questions about vector bundles to questions about the universal bundle, so long as the construction we're attempting is preserved by the pullback. That is just what happens in type theory with universes. They help understand structures over types by studing maps from types into a universe. \gc{strengthen this parallel if possible}
+
+The theory of vector bundles leads to the more general theory of principal bundles, and there's a lossless passage back and forth in the case of vector bundles provided by considering frame bundles. 
+
+In type theory the classifying space of $GL(n)$ is given by $$BGL(n) = (A:\mathcal{U})\times (\rho:GL(n)\times A\to A) \times (A\mathrm{\ is\ a\ representation\ of\ }GL(n))$$
+
 \section{Finding the manifolds inside HoTT}
 \section{Higher groups and actions}
 
