updates on differential geometry; new document

--- a/differential_geometry_in_hott/latex/draft/connections.bib
+++ b/differential_geometry_in_hott/latex/draft/connections.bib
@@ -1,3 +1,10 @@
+@misc{Symmetry,
+  title        = {Symmetry},
+  author       = {Marc Bezem and Ulrik Buchholtz and Pierre Cagne and Bjørn Ian Dundas and Daniel R. Grayson},
+  date         = {2023-04-06},
+  howpublished = {\url{https://github.com/UniMath/SymmetryBook}},
+}
+
 @book{kobayashinomizu,
   title={Foundations of Differential Geometry},
   author={Kobayashi, S. and Nomizu, K.},
