--- a/differential_geometry_in_hott/latex/draft/greg.sty
+++ b/differential_geometry_in_hott/latex/draft/greg.sty
@@ -5,6 +5,7 @@
 \RequirePackage{amsfonts}
 \RequirePackage{amsmath}
 \RequirePackage{amsthm}
+\RequirePackage{amscd}
 \RequirePackage{tikz-cd}
 % tipa is redefining the semicolon and bang
 \let\semicolon\;
@@ -63,7 +64,8 @@
 \newcommand{\cc}{\ensuremath{\mathbb{C}}}
 \newcommand{\nn}{\ensuremath{\mathbb{N}}}
 \newcommand{\dd}{\ensuremath{\mathbb{D}}}
-\newcommand{\vv}{\ensuremath{\mathbb{V}}}
+\newcommand{\zz}{\ensuremath{\mathbb{Z}}}
+\newcommand{\vvv}{\ensuremath{\mathbb{V}}}
 \newcommand{\cinfty}{\ensuremath{C^{\infty}}}
 \newcommand{\smfd}{\textsf{SmoothMfd}}
 \newcommand{\calg}{\textsf{CAlg}_{\rr}}
@@ -82,6 +84,8 @@
 \newcommand{\pt}{\mathrm{pt}}
 \newcommand{\Aut}{\mathrm{Aut}}
 \newcommand{\BAut}{\mathrm{BAut}}
+\newcommand{\EAut}{\mathrm{EAut}}
+\newcommand{\LAut}{\mathrm{LAut}}
 \newcommand{\im}{\mathrm{im}}
 \newcommand{\Fin}{\mathrm{Fin}}
 \newcommand{\Type}{\mathrm{Type}}
@@ -90,6 +94,7 @@
 \newcommand{\diffeo}{\mathrm{Diffeo}}
 \newcommand{\ad}{\mathrm{ad}}
 \newcommand{\Ad}{\mathrm{Ad}}
+\newcommand{\uni}{\mathcal{U}}
 
 \newcommand{\bg}{\ensuremath{\textbf{B}G}}
 \newcommand{\bgconn}{\ensuremath{\textbf{B}G_{\textsf{conn}}}}
