--- a/differential_geometry_in_hott/latex/draft/connections.bib
+++ b/differential_geometry_in_hott/latex/draft/connections.bib
@@ -165,7 +165,7 @@ a kind of cohesive motives.},
 }
 
 @article{atiyah1983yang,
-  title={The yang-mills equations over riemann surfaces},
+  title={The Yang-Mills Equations Over Riemann Surfaces},
   author={Atiyah, Michael Francis and Bott, Raoul},
   journal={Philosophical Transactions of the Royal Society of London. Series A, Mathematical and Physical Sciences},
   volume={308},
