--- a/differential_geometry_in_hott/latex/draft/greg.sty
+++ b/differential_geometry_in_hott/latex/draft/greg.sty
@@ -33,6 +33,7 @@
 \newcommand{\tp}{\;\mathrm{type}}
 \newcommand{\Hom}{\mathrm{Hom}}
 \newcommand{\G}{\Gamma}
+\newcommand{\gauge}{\mathcal{G}} % make this mathscr one day
 \newcommand{\pit}[1]{\prod_{(#1)}} % pi-type
 \newcommand{\pitxa}{\pit{x:A}}
 \newcommand{\sit}[1]{\sum_{(#1)}} % sigma-type
@@ -95,6 +96,7 @@
 \newcommand{\ad}{\mathrm{ad}}
 \newcommand{\Ad}{\mathrm{Ad}}
 \newcommand{\uni}{\mathcal{U}}
+\newcommand{\mysection}[1]{\section{\texorpdfstring{#1}{\detokenize{#1}}}}
 
 \newcommand{\bg}{\ensuremath{\textbf{B}G}}
 \newcommand{\bgconn}{\ensuremath{\textbf{B}G_{\textsf{conn}}}}
