got the visual tweaks to a great place; added placeholder chapters and sections per current plan

--- a/differential_geometry_in_hott/latex/draft/greg.sty
+++ b/differential_geometry_in_hott/latex/draft/greg.sty
@@ -97,6 +97,8 @@
 \newcommand{\Ad}{\mathrm{Ad}}
 \newcommand{\uni}{\mathcal{U}}
 \newcommand{\mysection}[1]{\section{\texorpdfstring{#1}{\detokenize{#1}}}}
+\newcommand{\mychapter}[1]{\chapter{\texorpdfstring{#1}{\detokenize{#1}}}}
+\newcommand{\mychapterstar}[1]{\chapter*{\texorpdfstring{#1}{\detokenize{#1}}}}
 
 \newcommand{\bg}{\ensuremath{\textbf{B}G}}
 \newcommand{\bgconn}{\ensuremath{\textbf{B}G_{\textsf{conn}}}}
