--- a/differential_geometry_in_hott/latex/draft/bundles.tex
+++ b/differential_geometry_in_hott/latex/draft/bundles.tex
@@ -1,39 +1,62 @@
-\documentclass[14pt]{extarticle}
+\documentclass[12pt]{report}
 \usepackage{greg}
+\usepackage{agda}
 \usepackage[baskerville,vvarbb]{newtxmath}
 \usepackage{fontspec}
-\usepackage{agda}
+\usepackage{titlesec}
+\usepackage[nottoc]{tocbibind}
+
 \setmainfont{Baskerville}
 \setsansfont{Quadrat-Serial}
 \setmonofont{Courier New}
-\usepackage{titlesec}
-\setcounter{secnumdepth}{0}
-\titleformat*{\section}{\large\sffamily\centering}
+
+\titleformat*{\section}{\large\sffamily}
 \titleformat*{\subsection}{\normalsize\sffamily}
 \titleformat*{\subsubsection}{\normalsize\sffamily}
+\titleformat{\chapter}[hang]{\LARGE\sffamily}{\LARGE\thechapter}{1ex}{}[]
+\titleformat{name=\chapter,numberless}[hang]{\LARGE\sffamily}{}{0ex}{}[]
 
 \title{Gauge Theory in Homotopy Type Theory}
 \author{Greg Langmead}
 
 \begin{document}
-\maketitle
-\begin{abstract}
-This thesis will show how to formalize parts of differential geometry and gauge theory in homotopy type theory.\cite{freed2013chernweil} \cite{kobayashinomizu} \cite{hamilton2017} \cite{scorpan_wild_2005} \cite{baez1994gauge} \cite{atiyah1983yang}
-\end{abstract}
+
+\begin{titlepage}
+\centering
+\parbox[b]{2\textwidth}{
+	\vspace{6\baselineskip}
+	{\Huge\sffamily Gauge Theory in\\ Homotopy Type Theory}\\[2\baselineskip]
+	{\Large\rmfamily{Greg Langmead}}
+
+	\vspace{0.47\textheight}
+	{\noindent Carnegie Mellon University}\\[0.1\baselineskip]
+	{\noindent \today}\\[\baselineskip]
+}
+\end{titlepage}
+
+\chapter*{Abstract}
+This thesis will show how to formalize parts of differential geometry, gauge theory, and Chern-Weil theory in homotopy type theory.
+
 \tableofcontents
-\mysection{Introduction}
-Differential geometry and gauge theory lie at the intersection of mathematics and physics. The theory of general relativity is expressed as formulas relating the curvature of spacetime to the distribution of energy and matter. The standard model of particle physics is expressed as a collection of principal bundles and associated vector bundles, sections of which represent the fields of matter and forces. And in the latter decades of the 20th century the tools of the standard model were applied back into mathematics to make discoveries about the geometry of 3- and 4-dimensional manifolds.
 
-Homotopy type theory seems at first like it's from a different universe entirely. It grew out of questions of a foundational nature inside mathematics and computer science. It brings a synthetic stance, where we are invited to stop thinking of mathematical objects as sets with structure, and instead to assemble the objects into higher categories with collective properties like being locally cartesian closed, or having homotopical model structures. Such categories have internal languages, which are syntactic structures much like programming languages, which allow us to reason about the objects in a generic way.
+\mychapter{Introduction}
+Differential geometry\cite{kobayashinomizu} \cite{baez1994gauge}, gauge theory \cite{hamilton2017} \cite{atiyah1983yang}, and Chern-Weil theory\cite{freed2013chernweil} lie at the intersection of mathematics and physics. The theory of general relativity is expressed as formulas relating the curvature of spacetime to the distribution of energy and matter. The standard model of particle physics is expressed as a collection of principal bundles and associated vector bundles, sections of which represent the fields of matter and forces. And in the latter decades of the 20th century the tools of the standard model were applied back into mathematics to make discoveries about the geometry of 3- and 4-dimensional manifolds\cite{scorpan_wild_2005}.
 
-\mysection{Groups}
+Homotopy type theory\cite{hottbook} seems at first like it's from a different universe entirely. It grew out of questions of a foundational nature inside mathematics and computer science. It brings a synthetic stance, where we are invited to stop thinking of mathematical objects as sets with structure, and instead to assemble the objects into higher categories with collective properties like being locally cartesian closed, or having homotopical model structures. Such categories have internal languages, which are syntactic structures much like programming languages, which allow us to reason about the objects in a generic way.
+
+\mychapter{Groups}
 Group theory including the theory of higher groups is built directly into HoTT, via the identity types. A thorough introductory treatment of group theory that adopts this philosophy can be found in the book \emph{Symmetry} \cite{Symmetry}. We will build on this synthetic framework to explore gauge theory. But it's important to be clear that this is a choice, and there is an alternate approach. Namely we could define a group to be a type together with some extra structure: an identity, a multiplication operation, and an inverse operation, satisfying some properties. We would do the same for higher groups, and we'd prove an equivalence between the type of higher groups and the type of pointed, connected types. Such a project has been undertaken in the context of higher topos theory, but at the time of this writing it hasn't been done inside HoTT. We certainly can define the type of groups which are sets, and prove that this type of 0-groups is equivalent to connected 1-types, and this is done in \emph{Symmetry}. But in the case of higher groups we only have one definition: pointed connected types. This happens to be a lovely theory, and so we'll be glad to run with that.
 
 Definition: a group is a pointed 1-type $BG$ with basepoint $*$, which is connected, i.e. that we have a term of the type $(a:BG)\to||*=a||_{-1}$. We denote the type $*=*$ by $G$, and so if we have a particular group in mind then we think of that group as being installed as the identity type of the basepoint in a type we call $BG$.
 
+\mysection{Group actions}
 Given any pointed type $X$ with basepoint $x$ we can form the type $\BAut_x(X)$ by taking the connected component of $x$. If we consider the terms of $X$ to be at type-theoretic level 0, then $\Aut_x$ brings one of the identity types from level 1 down to level 0 to look at it on its own. Then the B can be thought of as reinstalling the identity type at level 1 of the new type, which contains only the connected component of $x$. When we do this, though, we don't forget the identity types of all the other terms in the connected component. That's why there really isn't a true B operator, just a notation that is meant to evoke the classical idea of a classifying space, since as we'll see we really have captured that idea.
 
 A homomorphism of groups is a pointed map $f:BG\to X$. The rules of type theory will ensure that this map contains a map between the identity types inside the types, forming a homomorphism in the usual sense. We can think of $G$ acting on $x$ since the homomorphism is $*=*\to x=x$. If we take $X=\uni$ to be the universe, and if $f(*)=H$, then we can think of $G$ acting on the type $H$.
+
+\mysection{Equivariant maps}
+
+\mychapter{Principal bundles}
 
 \mysection{Bundles over $BG$}
 Pointed connected types $BG$ come with three built-in type families by choosing identity types with different endpoints. There's $LG:=(a:BG)\times a=a$ which is at each point the group of self-identifications of that point. There's $EG:=(a:BG)\times *=a$ which aren't groups, but which are similar to the self-identifications, and in fact are torsors over $G$! At each point $a:BG$ we can concatenate a term of $EG(a)$ with a term of $LG(a)$ by concatenating the latter to the $a$ endpoint of $EG(a)$. And lastly there's the non-dependent type $BG\times G$ which I'm mentioning because we can also concatenate a term of $EG(a)$ with a term of $G$, by attaching it to the $*$ endpoint.
@@ -91,6 +114,8 @@ The bundle $E_fX$ would classically be called something like $P$, a principal bu
 
 \mysection{$BG$ classifies bundles, not just equivalence classes}
 The classical theorems take the form: taking the pullback of $EG\to BG$ forms a bijection between homotopy classes of maps $f:X\to BG$ and equivalence classes of principal $G$-bundles over $X$. 
+
+\mysection{Universes versus bundles}
 
 \mysection{Eilenberg-Mac Lane spaces}
 \emph{Inductive types} are collections of data and rules for mapping out of instances of the collection. For example here is an inductive type defining the natural numbers in Agda:
@@ -224,12 +249,15 @@ Given a group $G$ (meaning, a 0-type) with identity $G.1g$ and multiplication $G
 	\AgdaBound{s}\<%
 \end{code}
 
-\mysection{Cohomology}
+\mysection{Associated bundles}
 
-\mysection{Universes versus bundles}
+\mychapter{Cohomology and characteristic classes}
 
-\mysection{Towards connections}
+\mychapter{Connections and Chern-Weil theory}
     
+\appendix
+\chapter{Appendix}
+
 \bibliography{connections}
 
 \end{document}
