getting up and running with the gauge theory document in markdown, latex, and agda

--- a/differential_geometry_in_hott/latex/draft/greg.sty
+++ b/differential_geometry_in_hott/latex/draft/greg.sty
@@ -39,7 +39,7 @@
 \newcommand{\sit}[1]{\sum_{(#1)}} % sigma-type
 \newcommand{\ent}{\vdash}
 \newcommand{\adj}{\dashv}
-\newcommand{\refl}{\ensuremath{\textsf{refl}}}
+\newcommand{\refl}{\ensuremath{\textrm{refl}}}
 \newcommand{\ap}{\ensuremath{\textsf{ap}}}
 \newcommand{\ind}{\ensuremath{\textsf{ind}}}
 \newcommand{\lift}{\ensuremath{\textsf{lift}}}
