--- a/differential_geometry_in_hott/latex/draft/bundles.tex
+++ b/differential_geometry_in_hott/latex/draft/bundles.tex
@@ -47,14 +47,27 @@ Homotopy type theory\cite{hottbook} seems at first like it's from a different un
 \mychapter{Groups}
 Group theory including the theory of higher groups is built directly into HoTT, via the identity types. A thorough introductory treatment of group theory that adopts this philosophy can be found in the book \emph{Symmetry} \cite{Symmetry}. We will build on this synthetic framework to explore gauge theory. But it's important to be clear that this is a choice, and there is an alternate approach. Namely we could define a group to be a type together with some extra structure: an identity, a multiplication operation, and an inverse operation, satisfying some properties. We would do the same for higher groups, and we'd prove an equivalence between the type of higher groups and the type of pointed, connected types. Such a project has been undertaken in the context of higher topos theory, but at the time of this writing it hasn't been done inside HoTT. We certainly can define the type of groups which are sets, and prove that this type of 0-groups is equivalent to connected 1-types, and this is done in \emph{Symmetry}. But in the case of higher groups we only have one definition: pointed connected types. This happens to be a lovely theory, and so we'll be glad to run with that.
 
-Definition: a group is a pointed 1-type $BG$ with basepoint $*$, which is connected, i.e. that we have a term of the type $(a:BG)\to||*=a||_{-1}$. We denote the type $*=*$ by $G$, and so if we have a particular group in mind then we think of that group as being installed as the identity type of the basepoint in a type we call $BG$.
+\begin{mydef} A (higher) group is a pointed 1-type $BG$ with basepoint $*$, which is connected, i.e. that we have a term of the type $(a:BG)\to||*=a||_{-1}$. We denote the type $*=*$ by $G$, and so if we have a particular group in mind then we think of that group as being installed as the identity type of the basepoint in a type we call $BG$.
+\end{mydef}
+
+This notation is fairly confusing, since we have stated that $BG$ is a group, but that $G$ is the group we really mean. Let's see how much trouble it ends up causing.
+
+\begin{mylemma}
+If $X$ is a pointed, connected 1-type with basepoint $*$,$x:X$ is any term, and $p:*=x$ any term, then the sets $*=*$ and $*=x$ are isomorphic. Furthermore, $*=*$ acts on $*=x$ freely and transitively, by concatenation.
+\end{mylemma}
+\begin{proof}
+For the first statement, define $-\cdot p:*=*\to *=x$, by concatenating with $p$. Then $-\cdot p^{-1}:*=x\to *=*$ is a two-sided inverse. For the second statement, if $g:*=*$ then $g\cdot p:*=x$, giving an action. Transitivity can be seen by solving the equation $q = g\cdot p$ for $g$ by concatenating both sides by $p^{-1}$ on the right. Freeness can be seen by observing that $g\cdot p = h\cdot p$ implies that $g=h$.
+\end{proof}
+
+So identity types with unequal endpoints like $*=x$ are torsors, and it's noteworthy to find torsors appearing to close to the foundations of HoTT.
 
 \mysection{Group actions}
 Given any pointed type $X$ with basepoint $x$ we can form the type $\BAut_x(X)$ by taking the connected component of $x$. If we consider the terms of $X$ to be at type-theoretic level 0, then $\Aut_x$ brings one of the identity types from level 1 down to level 0 to look at it on its own. Then the B can be thought of as reinstalling the identity type at level 1 of the new type, which contains only the connected component of $x$. When we do this, though, we don't forget the identity types of all the other terms in the connected component. That's why there really isn't a true B operator, just a notation that is meant to evoke the classical idea of a classifying space, since as we'll see we really have captured that idea.
 
-A homomorphism of groups is a pointed map $f:BG\to X$. The rules of type theory will ensure that this map contains a map between the identity types inside the types, forming a homomorphism in the usual sense. We can think of $G$ acting on $x$ since the homomorphism is $*=*\to x=x$. If we take $X=\uni$ to be the universe, and if $f(*)=H$, then we can think of $G$ acting on the type $H$.
+A homomorphism of groups is a pointed map $f:BG\to X$. The rules of type theory will ensure that this map contains a map between the identity types inside the types, forming a group homomorphism in the usual sense. We can think of $G$ acting on $x$ since the homomorphism is $*=*\to x=x$. If we take $X=\uni$ to be the universe, and if $f(*)=H$, then we can think of $G$ acting on the type $H$.
 
 \mysection{Equivariant maps}
+If $BG\xrightarrow[]{r_X} \BAut_x X$ and $BG\xrightarrow[]{r_Y} \BAut_y Y$ are two group actions
 
 \mychapter{Principal bundles}
 
