--- a/differential_geometry_in_hott/agda/connections.bib
+++ b/differential_geometry_in_hott/agda/connections.bib
@@ -1,3 +1,19 @@
+@software{agda-unimath,
+author = {Rijke, Egbert and Bonnevier, Elisabeth and Prieto-Cubides, Jonathan and Bakke, Fredrik and {others}},
+license = {MIT},
+title = {{The agda-unimath library}},
+url = {https://github.com/UniMath/agda-unimath/}
+}
+
+@misc{sterling2023geometry,
+      title={Towards a geometry for syntax}, 
+      author={Jonathan Sterling},
+      year={2023},
+      eprint={2307.09497},
+      archivePrefix={arXiv},
+      primaryClass={cs.LO}
+}
+
 @misc{Symmetry,
   title        = {Symmetry},
   author       = {Marc Bezem and Ulrik Buchholtz and Pierre Cagne and Bjørn Ian Dundas and Daniel R. Grayson},
