more writing and formalization

--- a/differential_geometry_in_hott/agda/connections.bib
+++ b/differential_geometry_in_hott/agda/connections.bib
@@ -1,3 +1,19 @@
+@online{baez_schreier_week223,
+    title        = {This Week's Finds in Mathematical Physics (Week 223)},
+    author       = {John Baez},
+    year         = 2005,
+    url          = {https://math.ucr.edu/home/baez/week223.html},
+    urldate      = {2023-10-02}
+}
+
+@phdthesis{myersthesis,
+  author = {David Jaz Myers}, 
+  title = {Symmetry, Geometry, Modality},
+  school = {Johns Hopkins University},
+  url = {http://jhir.library.jhu.edu/handle/1774.2/67618},
+  year = {2022},
+}
+
 @software{agda-unimath,
 author = {Rijke, Egbert and Bonnevier, Elisabeth and Prieto-Cubides, Jonathan and Bakke, Fredrik and {others}},
 license = {MIT},
